--- a/toc.html
+++ b/toc.html
@@ -123,14 +123,24 @@
                      <td>S1_45.xml</td>
                   </tr>
                   <tr>
+                     <td><a href="Antiphonarium%20de%20Tempore%20et%20Sanctis%20Pro%20Choro%20Graecensi.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td></td>
+                     <td>Antiphonarium%20de%20Tempore%20et%20Sanctis%20Pro%20Choro%20Graecensi.xml</td>
+                  </tr>
+                  <tr>
+                     <td><a href="A67_21.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td>A-Gf_A67_21_Grad_Part3</td>
+                     <td>A67_21.xml</td>
+                  </tr>
+                  <tr>
                      <td><a href="A67_19.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/19</td>
                      <td>A67_19.xml</td>
                   </tr>
                   <tr>
-                     <td><a href="1499840.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>A-Gf_A67_21_Grad_Part3</td>
-                     <td>1499840.xml</td>
+                     <td><a href="Hymnarium%20Sacrum%20tam%20Romanum%20Urbani%20Papae%20VIII%20recognitum.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td></td>
+                     <td>Hymnarium%20Sacrum%20tam%20Romanum%20Urbani%20Papae%20VIII%20recognitum.xml</td>
                   </tr>
                   <tr>
                      <td><a href="S1_40.html"><i class="bi bi-link-45deg"></i></a></td>
@@ -161,6 +171,11 @@
                      <td><a href="A67_20.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/20</td>
                      <td>A67_20.xml</td>
+                  </tr>
+                  <tr>
+                     <td><a href="Antiphonarium%20de%20Sanctis%20Trium%20Ordinum%20Sancti%20Patris%20Francisci.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td></td>
+                     <td>Antiphonarium%20de%20Sanctis%20Trium%20Ordinum%20Sancti%20Patris%20Francisci.xml</td>
                   </tr>
                   <tr>
                      <td><a href="A64_42.html"><i class="bi bi-link-45deg"></i></a></td>
@@ -238,9 +253,19 @@
                      <td>S1_74.xml</td>
                   </tr>
                   <tr>
+                     <td><a href="A70_45.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td>Antiphonas Festorum Principaliorum</td>
+                     <td>A70_45.xml</td>
+                  </tr>
+                  <tr>
                      <td><a href="S1_69.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</td>
                      <td>S1_69.xml</td>
+                  </tr>
+                  <tr>
+                     <td><a href="Cantus%20Ecclesiasticus.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td></td>
+                     <td>Cantus%20Ecclesiasticus.xml</td>
                   </tr>
                   <tr>
                      <td><a href="S1_61.html"><i class="bi bi-link-45deg"></i></a></td>
@@ -264,13 +289,18 @@
                   </tr>
                   <tr>
                      <td><a href="S1_67.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td></td>
+                     <td>Antiphonarium de Sanctis Ordinis Minorum</td>
                      <td>S1_67.xml</td>
                   </tr>
                   <tr>
                      <td><a href="S1_40a.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Cantus Ecclesiasticus</td>
                      <td>S1_40a.xml</td>
+                  </tr>
+                  <tr>
+                     <td><a href="Libellus%20Antiphonarum.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td></td>
+                     <td>Libellus%20Antiphonarum.xml</td>
                   </tr>
                   <tr>
                      <td><a href="S1_68.html"><i class="bi bi-link-45deg"></i></a></td>
