--- a/S1_40.html
+++ b/S1_40.html
@@ -564,9 +564,9 @@
          </div>
       </main>
       <footer  class="footer mt-auto py-3 bg-body-tertiary">
-         <div class="container-fluid" id="footer-full-content" tabindex="-1">
+         <div class="container-fluid" id="footer-full-content" tabindex="-1" align="center">
             <div class="footer-separator"> KONTAKT </div>
-            <div class="row">
+            <div class="row justify-content-center">
                <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6  ml-auto  text-center ">
                   <div class="textwidget custom-html-widget"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 90%; height: auto;" title="ACDH Logo"></a></div>
                </div>
